--- a/generator/package.json
+++ b/generator/package.json
@@ -1,11 +1,12 @@
 {
   "name": "generator",
   "version": "1.0.0",
-  "description": "Script to generate Merkle tree root from inputs",
+  "description": "Aphra Airdrop Generator",
   "scripts": {
-    "start": "ts-node src/app.ts"
+    "start": "ts-node src/app.ts",
+    "generate-config": "ts-node src/app.ts aphraAirdrop.csv"
   },
-  "author": "Anish Agnihotri",
+  "author": "androolloyd",
   "license": "AGPL-3.0-only",
   "keywords": [
     "merkle",
@@ -22,6 +23,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "ethers": "^5.5.2",
     "keccak256": "^1.0.6",
     "merkletreejs": "^0.2.27",
